# cg

./: .gitignore  README.md
ex 3/: CMakeLists.txt
ex 3/data/: path.vert  sphere.frag
ex 3/src/: exercise31.cpp  exercise32.cpp  exercise34.cpp
ex 3/src/util/: abstractexercise.h  abstractpainter.h  camera.h  fileassociatedshader.cpp  glviewer.cpp  unitcube.h
ex1/tiel_1/: crc.h  main.cpp
ex1/tiel_1/images/: test.ppm
ex1/tiel_2/: CMakeLists.txt  imageeffects.cpp  imageviewer.cpp  imageviewer.ui
ex3/data/: path.frag  sphere.vert
ex3/src/: exercise31.cpp  exercise32.cpp  exercise33.cpp
ex3/src/util/: abstractexercise.cpp  icosahedron.h  objio.cpp
ex4/: CMakeLists.txt
ex4/data/: box.vert  cube.frag  cube14.frag  cube14.vert  sphere.frag  sphere.vert
ex4/src/: exercise41.cpp  exercise41.h  exercise42.cpp  exercise43.cpp  exercise43.h
ex4/src/util/: abstractexercise.cpp  abstractexercise.h  abstractpainter.cpp  box.cpp  box.h  camera.cpp  camera.h  glviewer.cpp  glviewer.h  icosahedron.cpp  icosahedron.h  movingunitsphere.cpp  movingunitsphere.h  polygonaldrawable.cpp
ex5/: CMakeLists.txt
ex5/data/: cone.vert  cube.frag  cube.geom  cube.tcs  cube.tes  cube.vert  model.geom
ex5/src/: exercise51.cpp  exercise51.h  exercise52.cpp  exercise52.h  exercise53.cpp  exercise53.h
ex5/src/util/: abstractexercise.cpp  abstractexercise.h  abstractpainter.cpp  abstractpainter.h  camera.cpp  camera.h  glviewer.cpp  glviewer.h  icosahedron.cpp  openglfunctions.h  polygonaldrawable.h  unitcube.cpp
programmrahmen/tiel_1/: crc.cpp  main.cpp
tiel_1/: CMakeLists.txt  main.cpp
tiel_2/: imageeffects.cpp  imageeffects.h  imageviewer.h
